--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -50,7 +50,7 @@ collections: # A list of collections the CMS should be able to edit
                 widget: string
               - label: Text
                 name: text
-                widget: text      
+                widget: text
       - file: "site/content/values/_index.md"
         label: "Values Page"
         name: "values"
@@ -64,3 +64,4 @@ collections: # A list of collections the CMS should be able to edit
               - {label: Heading, name: heading, widget: string}
               - {label: Text, name: text, widget: text}
               - {label: Image, name: imageUrl, widget: image}
+              - {label: Birthday, name: birthday, widget: date}
