--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -12,7 +12,8 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Date", name: "date", widget: "datetime"}
-      - {label: "Location", name: "location", widget: "map"}
+      - {label: "Location", name: "location", widget: "string"}
+      - {label: "Map", name: "map", widget: "map"}
       - {label: "Intro", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
